--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.lion.takephoto" >
     <uses-permission android:name= "android.permission.CAMERA" />
     <uses-permission android:name= "android.permission.INTERNET" />
+    <uses-permission android:name= "android.permission.ACCESS_NETWORK_STATE" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <application
         android:allowBackup="true"
